# examples

./: README.md  bash-exam_2020.sh  bash_parameter_expansion.sh  bash_tricks.txt  example_commands_new.txt  gdb.txt  lesson-0_linux_sed_awk.txt  lesson0.txt
.github/workflows/: cmake.yml  codeql-analysis.yml
c_programming/: book_secure_c.md  c_array.c  c_function_ptrs.c  c_ptrs2.c  enum.c  gdb.txt
c_programming/advent2021/: README.md  read_input.c  read_input.h  skeleton.c  ugly_build.sh
c_programming/advent2021/1/: a.out
c_programming/advent2021/2/: 2.c
c_programming/advent2021/3/: 3.c
c_programming/advent2021/4/: 4.c  a.out
c_programming/development_tips/: README.md  cmake_build_example.txt  code_testing.md  code_testing.txt  div.txt  gcc_build_example.sh  gcc_build_example.txt  gcc_flags.md  gdb.txt  linking.txt  vim_cscope.txt
c_programming/examples/: .clang-format  CMakeLists.txt  README.md  array.c  bit_manip.c  build_and_run.sh  c_ptrs.c  enum.c  function_ptrs.c  ptrs.c  ptrs2.c
c_programming/examples/advent2021/: CMakeLists.txt  read_input.c  read_input.h  skeleton.c
c_programming/examples/advent2021/1/: 1.c  1.out
c_programming/examples/advent2021/2/: 2.c  2.out  a.out
c_programming/examples/advent2021/3/: 3.c  3.out  a.out
c_programming/examples/advent2021/4/: 4.c  4.out
c_programming/examples/div/: build_and_run.sh
c_programming/examples/react_exercise/: CMakeLists.txt  react.c  react.h  react_alternative.c
c_programming/react_exercise/: README  react.c  react.h  react_alternative.c
linux_and_scripting/: README.md  awk-0_update-numbers.sh  awk_more_examples.txt  awk_stupid_examples.txt  bash-exam_2020.sh  bash_parameter_expansion.sh  bash_scripting_tricks.txt  bash_tricks.txt  example_commands.txt  example_commands_new.txt  json.md  text_tools.md
write-ups_unpublished/: LSM_apparmor_selinux.md  README.md  book_secure_c.md  ecc.md  mail.md  oscp_cheatsheet.md  web_sec101.md
write-ups_unpublished/OSCP_scripts/: README.md  ad.sh  docker_build.sh  index.md  try_known_creds.sh  usernames_add_domain.sh
write-ups_unpublished/OSCP_scripts/more/: combine_lines.sh  for_each_line.sh  try_all_known_creds.sh
